# asm-data-creator

./: .gitignore  README.md  activity_log.py  asm_generator.spec  backup_store.py  diff_baseline.py  diff_engine.py  generate_asm.py  main.py  pyinstaller.cmd  pyproject.toml  requirements.txt  settings_store.py  sftp_client.py  sftp_credentials.py  snapshot_store.py  subject_map.json
.github/workflows/: auto-tag.yml  build-exe.yml  build-release.yml  release-exe.yml
asm_generator/: __init__.py  config.py  generator.py  parsers.py  transform.py  writer.py
gui/: app_controller.py  main_window.py  workers.py
gui/pages/: diff_review_page.py  input_page.py  settings_page.py
tests/: conftest.py  test_activity_log.py  test_app_controller_sftp.py  test_backup_store.py  test_diff_baseline.py  test_diff_engine.py  test_diff_review_page_bulk_selection.py  test_input_page_mode_payloads.py  test_packaging_spec.py  test_parsers.py  test_settings_page_layout.py  test_settings_store.py  test_sftp_client.py  test_sftp_credentials.py  test_snapshot_store.py  test_transform.py
